Set clean-up handler for marshalled arrays

Arrays did not have a cleanup handler set in some cases, resulting in a leak.

https://bugzilla.gnome.org/show_bug.cgi?id=691509